--- a/aplique-parede/index.html
+++ b/aplique-parede/index.html
@@ -14,9 +14,9 @@
     <div id="menu"
         class="fixed top-0 left-0 z-20 w-full h-full opacity-0 invisible transition-all duration-200 select-none">
         <div id="menuBg"
-            class="relative top-0 left-0 w-screen h-screen bg-black/20 z-20 transition-opacity duration-200">
+            class="relative top-0 left-0 w-full h-full bg-black/20 z-20 transition-opacity duration-200">
             <div id="menuList"
-                class="relative top-0 left-0 h-screen overflow-y-auto bg-white z-30 w-96 p-10 -translate-x-full transition-transform duration-300">
+                class="relative top-0 left-0 h-full overflow-y-auto bg-white z-30 w-96 p-10 -translate-x-full transition-transform duration-300">
                 <div id="toggleMenuBtn" class="absolute top-2 right-0 z-40 w-12 h-16 mr-5 cursor-pointer group">
                     <svg class="absolute w-14 h-full opacity-0 group-hover:opacity-100 transition-opacity duration-200 z-20"
                         viewBox="0 0 76 76" xmlns="http://www.w3.org/2000/svg">
@@ -248,7 +248,7 @@
     <div class="flex justify-center mt-[72px] mb-4 px-4 w-full h-max bg-white">
         <div class="w-full max-w-7xl">
             <p class="text-xs mb-4 pt-2"><a href="#" class="underline">La Redoute</a> > <a href="#"
-                    class="underline">Iluminação</a> > <a href="#" class="underline font-bold">Apliques de parede</a>
+                    class="underline">Iluminação</a> > <a href="/aplique-parede/" class="underline font-bold">Apliques de parede</a>
             </p>
             <div class="flex flex-row w-full items-center justify-center">
                 <h1 class="border-l-8 border-rose-500 font-bold text-2xl pl-2 w-fit  mr-2 whitespace-nowrap">
@@ -1541,25 +1541,25 @@
         </div>
 
         <div class="text-white bg-[#00454C] w-full flex flex-row justify-center">
-            <div class="flex flex-row items-center space-x-2 py-2 w-full max-w-7xl">
+            <div class="flex flex-col md:flex-row flex-wrap md:items-center space-y-2 md:space-x-2 md:space-y-0 p-4 w-full max-w-7xl">
                 <a class="text-xs" href="#">Condições gerais de venda</a>
-                <svg class="w-1 h-1" viewBox="0 0 5 5" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <svg class="w-1 h-1 hidden md:block" viewBox="0 0 5 5" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="2.5" cy="2.5" r="2.5" />
                 </svg>
                 <a class="text-xs" href="#">*Condições das ofertas em vigor</a>
-                <svg class="w-1 h-1" viewBox="0 0 5 5" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <svg class="w-1 h-1 hidden md:block" viewBox="0 0 5 5" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="2.5" cy="2.5" r="2.5" />
                 </svg>
                 <a class="text-xs" href="#">Política de privacidade e cookies</a>
-                <svg class="w-1 h-1" viewBox="0 0 5 5" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <svg class="w-1 h-1 hidden md:block" viewBox="0 0 5 5" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="2.5" cy="2.5" r="2.5" />
                 </svg>
                 <a class="text-xs" href="#">Intermediação de crédito</a>
-                <svg class="w-1 h-1" viewBox="0 0 5 5" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <svg class="w-1 h-1 hidden md:block" viewBox="0 0 5 5" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="2.5" cy="2.5" r="2.5" />
                 </svg>
                 <a class="text-xs" href="#">Livro de reclamações eletrónico</a>
-                <svg class="w-1 h-1" viewBox="0 0 5 5" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <svg class="w-1 h-1 hidden md:block" viewBox="0 0 5 5" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="2.5" cy="2.5" r="2.5" />
                 </svg>
                 <a class="text-xs" href="#">Recrutamento La Redoute</a>
